--- a/resources/player_2.html
+++ b/resources/player_2.html
@@ -112,7 +112,7 @@
 
     <div class="container-4k">
         <div class="left-subcontainer">
-            <img src="D.png" alt="Player">
+            <img src="player.png" alt="Player">
         </div>
         <div class="right-subcontainer">
             <div>
