--- a/resources/medals.html
+++ b/resources/medals.html
@@ -11,38 +11,61 @@
             box-sizing: border-box;
         }
 
-        body {
-            background-color: #f8fbffff; /* Adjust background color if necessary */
-            font-family: 'Comfortaa', cursive;
+        .container-4k {
+            width: 3840px;
+            height: 2160px;
+            margin: 0 auto;
+            display: flex;
         }
 
-        .container {
-            width: 100%;
-            height: 100vh;
-            padding: 40px;
+        .left-subcontainer {
+            width: 33.33%; /* 1/3 of the container */
+            height: 100%;
+            background-color: #174779ff; /* Same color as the main container */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .right-subcontainer {
+            width: 66.67%; /* 2/3 of the container */
+            height: 100%;
             display: flex;
             flex-direction: column;
             justify-content: space-between; /* Space out content vertically */
+            padding: 0 40px;
         }
 
         .title-container {
             width: 100%;
-            background: radial-gradient(circle, #174779ff 50%, #f8fbffff 100%); /* Radial gradient from the center */
-            padding: 80px 40px; /* Padding around the title */
-            text-align: center; /* Center the title text */
-            border-radius: 30px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add some shadow for depth */
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            background: linear-gradient(to right, #174779ff, #f8fbffff); /* Gradient background for the title */
+            padding: 80px 40px; /* Double the padding */
+            text-align: left; /* Align text to the left */
         }
 
         .title {
-            font-family: 'Comfortaa', cursive;
+            font-family: 'Comfortaa', cursive; /* Apply the Comfortaa font */
             color: white; /* Set the title color to white */
-            font-size: 128px; /* Large font size for the title */
+            font-size: 128px; /* Double the font size */
             font-weight: bold;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Add subtle shadow */
+            margin: 0;
+        }
+
+        .info-container {
+            width: 100%;
+            padding: 20px 40px; /* Padding for the container */
+            background-color: #f8fbffff; /* Same background color as the rest of the right container */
+            text-align: left;
+            font-size: 36pt; /* Base font size for reference */
+        }
+
+        .subtitle {
+            font-family: 'Comfortaa', cursive; /* Apply the Comfortaa font */
+            color: #174779ff; /* Text color to match the theme */
+            font-size: 72pt; /* Double the size of the text */
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2); /* Add subtle shadow */
             margin: 0;
         }
 
@@ -53,34 +76,80 @@
             border: 2px solid #dbecff;
             border-radius: 30px; /* Very rounded corners */
             flex-grow: 1; /* Make the box grow to fill the space */
-            display: flex;
+            margin-top: 20px; /* Space between text and box */
+            display: flex; /* Make it a flex container */
             flex-direction: column;
-            justify-content: flex-end; /* Align content to the bottom */
-            align-items: flex-start;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add some shadow for depth */
+            justify-content: center;
+            align-items: center; /* Center align items */
         }
 
-        .box-text {
+        .box-image {
+            width: 30%; /* Set image size to 30% of container */
+            height: auto;
+            margin-bottom: 20px; /* Space between image and text */
+            border: 10px solid #174779ff; /* Add a border to the image */
+            border-radius: 15px; /* Rounded corners for the border */
+        }
+
+        .box-title {
             font-family: 'Comfortaa', cursive;
-            font-size: 48pt; /* Font size for the text */
+            font-size: 64pt; /* Font size for the title */
             color: #174779ff;
-            margin-bottom: 20px;
-            text-align: left;
+            margin-bottom: 10px;
+            text-align: center;
+            background-color: #174779ff;
+            color: white;
+            padding: 20px;
+            border-radius: 15px;
         }
 
+        .box-subtitle {
+            font-family: 'Comfortaa', cursive;
+            font-size: 48pt; /* Font size for the subtitle */
+            color: #174779ff;
+            text-align: center;
+        }
+
+        .content-container {
+            flex-grow: 1; /* Use remaining space for content */
+            background-color: #f8fbffff; /* Background color for the rest of the container */
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .left-subcontainer img {
+            width: 50%; /* Scale the image to 50% of its original size */
+            height: auto; /* Maintain aspect ratio */
+            object-fit: contain;
+            border: 20px solid #7fb6ff; /* Double the size of the border */
+            border-radius: 20px; /* Rounds the corners of the border */
+        }
     </style>
 </head>
 <body>
 
-    <div class="container">
-        <div class="title-container">
-            <div class="title">MEDALLAS</div>
+    <div class="container-4k">
+        <div class="left-subcontainer">
+            <img src="player.png" alt="Player">
         </div>
-        <div class="box-container">
-            <div class="box-text">Metros recorridos: {{ mrun }}</div>
-            <div class="box-text">Velocidad de sprint media: {{ vsprint }}</div>
-            <div class="box-text">Tiempo en red:  {{ tnet }}</div>
-            <div class="box-text">Tiempo en fondo de pista:  {{ tbottom }}</div>
+        <div class="right-subcontainer">
+            <div>
+                <div class="title-container">
+                    <div class="title">JUGADOR {{ tag }}: {{ keyname }}</div>
+                </div>
+                <div class="info-container">
+                    <div class="subtitle">
+                        Posición: {{ position }}<br>
+                        Compañero de equipo: {{ tag_teammate }}
+                    </div>
+                </div>
+            </div>
+            <div class="box-container">
+                <img src="medals/bastion.png" alt="Medal" class="box-image">
+                <div class="box-title">{{ title }}</div>
+                <div class="box-subtitle">{{ subtitle }}</div>
+            </div>
         </div>
     </div>
 
